--- a/redisson/pom.xml
+++ b/redisson/pom.xml
@@ -27,7 +27,14 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit}</version>
-			<scope>test</scope>
+			<!-- <scope>test</scope> -->
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-lang3</artifactId>
+		    <version>3.7</version>
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/org.redisson/redisson -->
