--- a/neo4j/pom.xml
+++ b/neo4j/pom.xml
@@ -23,5 +23,12 @@
 			<version>3.4.0</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.neo4j/neo4j-jdbc -->
+		<dependency>
+		    <groupId>org.neo4j</groupId>
+		    <artifactId>neo4j-jdbc-driver</artifactId>
+		    <version>3.3.0</version>
+		</dependency>
+
 	</dependencies>
 </project>
